BUGFIX: #15938 add spacing between choose file button and uploaded image in image_widget

--- a/src/Sylius/Bundle/AdminBundle/Resources/private/sass/_ui.scss
+++ b/src/Sylius/Bundle/AdminBundle/Resources/private/sass/_ui.scss
@@ -48,6 +48,10 @@ a {
     padding-left: .2em;
 }
 
+.ui-media-upload-button {
+    margin-bottom: 1em;
+}
+
 // ----------------------------------
 // ------------ Forms
 // ----------------------------------
